syntax = "proto3";

package obs_remote.v5.inputs;

import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

service Inputs {
  // Original: GetInputList
  rpc List(ListRequest) returns (ListReply);
  // Original: GetInputKindList
  rpc ListKinds(ListKindsRequest) returns (ListKindsReply);
  // Original: GetSpecialInputNames
  rpc ListSpecial(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: GetInputDefaultSettings
  rpc DefaultSettings(DefaultSettingsRequest)
      returns (google.protobuf.StringValue);
  // Original: GetInputSettings
  rpc Settings(google.protobuf.StringValue) returns (SettingsReply);
  // Original: SetInputSettings
  rpc SetSettings(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: GetInputMute
  rpc Mute(google.protobuf.StringValue) returns (google.protobuf.BoolValue);
  // Original: SetInputMute
  rpc SetMute(SetMuteRequest) returns (google.protobuf.Empty);
  // Original: ToggleInputMute
  rpc ToggleMute(google.protobuf.StringValue)
      returns (google.protobuf.BoolValue);
  // Original: GetInputVolume
  rpc Volume(google.protobuf.StringValue) returns (VolumeReply);
  // Original: SetInputVolume
  rpc SetVolume(google.protobuf.FloatValue) returns (google.protobuf.Empty);
  // Original: GetInputAudioSyncOffset
  rpc AudioSyncOffset(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: SetInputAudioSyncOffset
  rpc SetAudioSyncOffset(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: GetInputTracks
  rpc Tracks(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: SetInputTracks
  rpc SetTracks(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: GetInputMonitorType
  rpc MonitorMode(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: SetInputMonitorType
  rpc SetMonitorMode(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: GetInputActive
  rpc IsActive(google.protobuf.Empty) returns (google.protobuf.BoolValue);
  // Original: GetInputPropertiesListPropertyItems
  rpc PropertiesListPropertyItems(google.protobuf.Empty)
      returns (google.protobuf.Empty);
  // Original: PressInputPropertiesButton
  rpc PressPropertiesButton(google.protobuf.Empty)
      returns (google.protobuf.Empty);
  // Original: SetInputName
  rpc SetName(google.protobuf.StringValue) returns (google.protobuf.Empty);
  // Original: CreateInput
  rpc Create(google.protobuf.Empty) returns (google.protobuf.Empty);
  // Original: DeleteInput
  rpc Delete(google.protobuf.Empty) returns (google.protobuf.Empty);
}

message ListRequest {
  string kind = 1;
}

message ListReply {
  string kind = 1;
  repeated Input inputs  = 2;

  message Input {
    string name = 1;
    string kind = 2;
    string unversioned_kind = 3;
  }
}

message ListKindsRequest {
  bool unversioned = 1;
}

message ListKindsReply {
  repeated string kinds = 1;
}

message DefaultSettingsRequest {
  string kind = 1;
}

message SettingsReply {
  string kind = 1;
  string settings = 2;
}

message SetMuteRequest {
  string name = 1;
  bool muted = 2;
}

message VolumeReply {
  float mul = 1;
  float db = 2;
}
